# note

./: 2021_10_8_17_10_游戏发热问题分析与自动化跟踪.md  README.md
gpu_temp/android/: CMakeLists.txt  gpu_temp.cpp  httplib.h
gpu_temp/client/: gpu_temp.py
